[gd_scene load_steps=29 format=3 uid="uid://yt1hxpqdgmva"]

[ext_resource type="Texture2D" uid="uid://5jouq5o4dtgf" path="res://assets/textures/bg/panel_beigeLight.png" id="2_xyu52"]
[ext_resource type="LabelSettings" uid="uid://cg1k487gxrf13" path="res://assets/theme/large_label.tres" id="3_ehal2"]
[ext_resource type="Script" path="res://scripts/exercise.gd" id="3_fptwj"]
[ext_resource type="Script" path="res://scripts/numpad.gd" id="3_xp5sa"]
[ext_resource type="Texture2D" uid="uid://c8rt2t6d7crxh" path="res://assets/textures/ui/buttonLong_beige.png" id="4_e5ot4"]
[ext_resource type="Texture2D" uid="uid://daclt3rbhs7l4" path="res://assets/textures/ui/buttonLong_beige_pressed.png" id="5_qkr3g"]
[ext_resource type="LabelSettings" uid="uid://ckxf44o6phpte" path="res://assets/theme/medium_label.tres" id="6_2p7c7"]
[ext_resource type="Script" path="res://scripts/animation_player.gd" id="6_8xwlg"]
[ext_resource type="PackedScene" uid="uid://bv557pno68fqy" path="res://scenes/screen_button.tscn" id="7_pqyxl"]
[ext_resource type="Script" path="res://scripts/status_modal.gd" id="9_momad"]
[ext_resource type="Texture2D" uid="uid://cwt0iolsq8l1n" path="res://assets/textures/bg/panel_blue.png" id="9_wsopw"]
[ext_resource type="LabelSettings" uid="uid://gkcvy4br5ybg" path="res://assets/theme/med_large_label.tres" id="10_5nby0"]
[ext_resource type="Texture2D" uid="uid://dq3byhmjbctuj" path="res://assets/textures/ui/buttonSquare_blue.png" id="10_diwl6"]
[ext_resource type="Texture2D" uid="uid://v7v5fmpavecr" path="res://assets/textures/ui/buttonLong_blue.png" id="11_3t5y7"]
[ext_resource type="Texture2D" uid="uid://cfhuoiff0iqd2" path="res://assets/textures/ui/buttonSquare_blue_pressed.png" id="11_17a72"]
[ext_resource type="Texture2D" uid="uid://cis82x1j6uhev" path="res://assets/textures/ui/buttonLong_blue_pressed.png" id="11_fnkxd"]
[ext_resource type="Texture2D" uid="uid://cgy2emewouiar" path="res://assets/textures/ui/iconCross_grey.png" id="12_eknbs"]
[ext_resource type="Script" path="res://scripts/back_button_animation.gd" id="13_cu01r"]
[ext_resource type="Texture2D" uid="uid://nyy7p55wgoas" path="res://assets/textures/bg/panel_brown.png" id="15_f0va8"]
[ext_resource type="LabelSettings" uid="uid://bj6ruriak1ymu" path="res://assets/theme/med_large_label_white.tres" id="17_5lx2p"]

[sub_resource type="Theme" id="Theme_5ykxn"]
default_font_size = 64

[sub_resource type="Animation" id="Animation_dqv4m"]
resource_name = "REST"
length = 0.001
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CheckBtn:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gs7ik"]
resource_name = "press"
length = 0.001
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CheckBtn:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 4.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_heoi0"]
_data = {
"RESET": SubResource("Animation_dqv4m"),
"press": SubResource("Animation_gs7ik")
}

[sub_resource type="LabelSettings" id="LabelSettings_iilh0"]
font_size = 18
font_color = Color(0.144063, 0.144063, 0.144063, 1)

[sub_resource type="Animation" id="Animation_v5mns"]
resource_name = "REST"
length = 0.001
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer/BackToOptions:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 0.0]
}

[sub_resource type="Animation" id="Animation_76xsx"]
resource_name = "press"
length = 0.001
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer/BackToOptions:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3mvj3"]
_data = {
"REST": SubResource("Animation_v5mns"),
"press": SubResource("Animation_76xsx")
}

[node name="ExerciseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_fptwj")

[node name="BGColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xyu52")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -174.0
offset_right = -100.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExerciseContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/ExerciseContainer"]
layout_mode = 2
theme_override_constants/separation = 55
alignment = 1

[node name="FirstNr" type="Label" parent="NinePatchRect/MarginContainer/ExerciseContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "888"
label_settings = ExtResource("3_ehal2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Operator" type="Label" parent="NinePatchRect/MarginContainer/ExerciseContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"
label_settings = ExtResource("3_ehal2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SecondNr" type="Label" parent="NinePatchRect/MarginContainer/ExerciseContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "888"
label_settings = ExtResource("3_ehal2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Equals" type="Label" parent="NinePatchRect/MarginContainer/ExerciseContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "="
label_settings = ExtResource("3_ehal2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputBox" type="VBoxContainer" parent="NinePatchRect/MarginContainer/ExerciseContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AnswerInput" type="LineEdit" parent="NinePatchRect/MarginContainer/ExerciseContainer/HBoxContainer/InputBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme = SubResource("Theme_5ykxn")
placeholder_text = "?"
alignment = 1
max_length = 4
virtual_keyboard_enabled = false
virtual_keyboard_type = 2

[node name="CheckBtnBox" type="MarginContainer" parent="NinePatchRect/MarginContainer/ExerciseContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="CheckBtn" type="TextureButton" parent="NinePatchRect/MarginContainer/ExerciseContainer/CheckBtnBox"]
custom_minimum_size = Vector2(244, 60)
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/ExerciseContainer/CheckBtnBox/CheckBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -21.0
offset_right = 17.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "OK"
label_settings = ExtResource("6_2p7c7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/MarginContainer/ExerciseContainer/CheckBtnBox"]
libraries = {
"": SubResource("AnimationLibrary_heoi0")
}
script = ExtResource("6_8xwlg")

[node name="NumpadContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.0
offset_top = 31.0
offset_right = 93.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
columns = 3
script = ExtResource("3_xp5sa")

[node name="NumpadButton" type="TextureButton" parent="NinePatchRect/NumpadContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/NumpadContainer/NumpadButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumpadButton2" type="TextureButton" parent="NinePatchRect/NumpadContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/NumpadContainer/NumpadButton2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumpadButton3" type="TextureButton" parent="NinePatchRect/NumpadContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/NumpadContainer/NumpadButton3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "3"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumpadButton4" type="TextureButton" parent="NinePatchRect/NumpadContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/NumpadContainer/NumpadButton4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "4"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumpadButton5" type="TextureButton" parent="NinePatchRect/NumpadContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/NumpadContainer/NumpadButton5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "5"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumpadButton6" type="TextureButton" parent="NinePatchRect/NumpadContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/NumpadContainer/NumpadButton6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "6"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumpadButton7" type="TextureButton" parent="NinePatchRect/NumpadContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/NumpadContainer/NumpadButton7"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "7"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumpadButton8" type="TextureButton" parent="NinePatchRect/NumpadContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/NumpadContainer/NumpadButton8"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "8"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumpadButton9" type="TextureButton" parent="NinePatchRect/NumpadContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/NumpadContainer/NumpadButton9"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "9"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumpadButton10" type="TextureButton" parent="NinePatchRect/NumpadContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/NumpadContainer/NumpadButton10"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "C"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumpadButton11" type="TextureButton" parent="NinePatchRect/NumpadContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_e5ot4")
texture_pressed = ExtResource("5_qkr3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/NumpadContainer/NumpadButton11"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusModal" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_momad")

[node name="ColorRect" type="ColorRect" parent="StatusModal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.168627)

[node name="TextureRect" type="TextureRect" parent="StatusModal/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_f0va8")

[node name="VBoxContainer" type="VBoxContainer" parent="StatusModal/ColorRect/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -95.5
offset_right = 71.0
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="StatusModal/ColorRect/TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="StatusModal/ColorRect/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Goed zo"
label_settings = ExtResource("17_5lx2p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultModal" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.187176, 0.187176, 0.187176, 0.968627)

[node name="MarginContainer" type="MarginContainer" parent="ResultModal"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -231.0
offset_top = 49.0
offset_right = 231.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect2" type="NinePatchRect" parent="ResultModal/MarginContainer"]
layout_mode = 2
texture = ExtResource("9_wsopw")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 7
patch_margin_bottom = 6

[node name="ResultsContainer" type="VBoxContainer" parent="ResultModal/MarginContainer/NinePatchRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -170.5
offset_right = 183.0
offset_bottom = 170.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="ResultModal/MarginContainer/NinePatchRect2/ResultsContainer"]
layout_mode = 2
text = "Resultaten"
label_settings = ExtResource("10_5nby0")
horizontal_alignment = 1

[node name="ResultLabel" type="Label" parent="ResultModal/MarginContainer/NinePatchRect2/ResultsContainer"]
layout_mode = 2
text = "Result label"
label_settings = ExtResource("6_2p7c7")
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="ResultModal/MarginContainer/NinePatchRect2/ResultsContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BackToOptions" parent="ResultModal/MarginContainer/NinePatchRect2/ResultsContainer/BoxContainer" instance=ExtResource("7_pqyxl")]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("11_3t5y7")
texture_pressed = ExtResource("11_fnkxd")
stretch_mode = 0

[node name="Label" type="Label" parent="ResultModal/MarginContainer/NinePatchRect2/ResultsContainer/BoxContainer/BackToOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -15.0
offset_right = 76.5
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "Terug naar opties"
label_settings = SubResource("LabelSettings_iilh0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResultModal/MarginContainer/NinePatchRect2/ResultsContainer"]
libraries = {
"": SubResource("AnimationLibrary_3mvj3")
}
script = ExtResource("13_cu01r")

[node name="Return" parent="." instance=ExtResource("7_pqyxl")]
layout_mode = 0
offset_left = 35.0
offset_top = 23.0
offset_right = 80.0
offset_bottom = 72.0
texture_normal = ExtResource("10_diwl6")
texture_pressed = ExtResource("11_17a72")

[node name="TextureRect" type="TextureRect" parent="Return"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.5
offset_top = -13.5
offset_right = 12.5
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_eknbs")

[connection signal="text_submitted" from="NinePatchRect/MarginContainer/ExerciseContainer/HBoxContainer/InputBox/AnswerInput" to="." method="_on_answer_input_text_submitted"]
[connection signal="button_down" from="NinePatchRect/MarginContainer/ExerciseContainer/CheckBtnBox/CheckBtn" to="NinePatchRect/MarginContainer/ExerciseContainer/CheckBtnBox/AnimationPlayer" method="_on_check_btn_button_down"]
[connection signal="button_up" from="NinePatchRect/MarginContainer/ExerciseContainer/CheckBtnBox/CheckBtn" to="NinePatchRect/MarginContainer/ExerciseContainer/CheckBtnBox/AnimationPlayer" method="_on_check_btn_button_up"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/ExerciseContainer/CheckBtnBox/CheckBtn" to="." method="_on_check_btn_pressed"]
[connection signal="pressed" from="NinePatchRect/NumpadContainer/NumpadButton" to="NinePatchRect/NumpadContainer" method="_on_numpad_button_pressed"]
[connection signal="pressed" from="NinePatchRect/NumpadContainer/NumpadButton2" to="NinePatchRect/NumpadContainer" method="_on_numpad_button_2_pressed"]
[connection signal="pressed" from="NinePatchRect/NumpadContainer/NumpadButton3" to="NinePatchRect/NumpadContainer" method="_on_numpad_button_3_pressed"]
[connection signal="pressed" from="NinePatchRect/NumpadContainer/NumpadButton4" to="NinePatchRect/NumpadContainer" method="_on_numpad_button_4_pressed"]
[connection signal="pressed" from="NinePatchRect/NumpadContainer/NumpadButton5" to="NinePatchRect/NumpadContainer" method="_on_numpad_button_5_pressed"]
[connection signal="pressed" from="NinePatchRect/NumpadContainer/NumpadButton6" to="NinePatchRect/NumpadContainer" method="_on_numpad_button_6_pressed"]
[connection signal="pressed" from="NinePatchRect/NumpadContainer/NumpadButton7" to="NinePatchRect/NumpadContainer" method="_on_numpad_button_7_pressed"]
[connection signal="pressed" from="NinePatchRect/NumpadContainer/NumpadButton8" to="NinePatchRect/NumpadContainer" method="_on_numpad_button_8_pressed"]
[connection signal="pressed" from="NinePatchRect/NumpadContainer/NumpadButton9" to="NinePatchRect/NumpadContainer" method="_on_numpad_button_9_pressed"]
[connection signal="pressed" from="NinePatchRect/NumpadContainer/NumpadButton10" to="NinePatchRect/NumpadContainer" method="_on_numpad_button_10_pressed"]
[connection signal="pressed" from="NinePatchRect/NumpadContainer/NumpadButton11" to="NinePatchRect/NumpadContainer" method="_on_numpad_button_11_pressed"]
[connection signal="button_down" from="ResultModal/MarginContainer/NinePatchRect2/ResultsContainer/BoxContainer/BackToOptions" to="ResultModal/MarginContainer/NinePatchRect2/ResultsContainer/AnimationPlayer" method="_on_back_to_options_button_down"]
[connection signal="button_up" from="ResultModal/MarginContainer/NinePatchRect2/ResultsContainer/BoxContainer/BackToOptions" to="ResultModal/MarginContainer/NinePatchRect2/ResultsContainer/AnimationPlayer" method="_on_back_to_options_button_up"]
